--- a/style.css
+++ b/style.css
@@ -1,53 +1,28 @@
-/* header {
-  height: 7%;
-  background-color: lightblue;
-  text-align: center;
-  font-size: 35px;
-  padding-top: 20px;
+body{
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #464570;
+    flex: 8;
 }
-header.h1 {
-  margin: 0;
-  margin: 30px auto 0 auto;
-}
-form {
-  display: flex;
-  width: fit-content;
-  box-shadow: inset 0 0 5px rgb(179, 176, 176);
-  padding: 2px;
-  background-color: white;
-  margin: 30px auto 0 auto;
- 
-}
-body {
-  height: 90%;
-  background-color: lightgrey;
-} */
-header {
-  display: flex;
-  background-color: aqua;
-  justify-content: space-between;
-  margin-top: 40px;
-  height: 15vh;
-}
-header .logo {
-  margin: 0% auto auto .5%;
-  display: flex;
-  align-items: center;
+header{
+    flex :2;
+    display: flex;
+    background-color: #1e2d36;
+    color: #fdd4d4;
   
-}
-header form {
-  margin: auto .5% .5% auto;
-  display: flex;
-  align-items: center;
+    text-align: center;
 }
 
-header .nav { margin: auto .5% .5% auto;
-  
+footer{
+    flex:2;
+    background-color: #202e36;
+    color: #ecb8b8;
+    text-align: center;
+    
+
 }
-.search-button {
-    position: absolute; /* Positions the button relative to the .search-container */
-    right: 0; /* Aligns the button to the right */
-    top: 0; /* Aligns the button to the top */
-    height: 100%;
-    width: 45px; /* Width of the button */
+ul{
+    display :flex;
+
 }
